# B2_ROS_Signal

./: .gitignore  CMakeLists.txt  PROJECT_GUIDE.md  README.md  package.xml
config/: rc_bridge_params.yaml
docs/: ARCHITECTURE_GUIDE.md  LOCAL_TESTING_GUIDE.md  PROJECT_GUIDE.md
include/b2_native_rc_interface/: types.hpp
include/b2_native_rc_interface/bridge/: rc_signal_bridge.hpp
include/b2_native_rc_interface/utils/: joystick_processor.hpp  key_parser.hpp
launch/: rc_bridge.launch.py  rc_bridge_with_test.launch.py  rc_full_simulation.launch.py  rc_keyboard_test.launch.py  rc_simulator.launch.py
msg/: ButtonState.msg  JoystickState.msg  NativeRC.msg  RobotState.msg
src/bridge/: rc_signal_bridge.cpp
src/nodes/: rc_bridge_node.cpp  rc_keyboard_simulator.cpp  rc_simulator_node.cpp  rc_test_subscriber.cpp
src/utils/: joystick_processor.cpp  key_parser.cpp
test/: demo_keyboard.sh  test_key_parser.cpp
