<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b2_native_rc_interface</name>
  <version>1.0.0</version>
  <description>
    Unitree B2 Native Remote Controller Signal Bridge for ROS2 Foxy.
    This package provides passive listening of B2's original remote controller signals
    and publishes them as ROS2 topics without intercepting or modifying the original control flow.
    
    Note: B2 runs ROS2 Foxy with CycloneDDS 0.10.x
  </description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  
  <author email="your_email@example.com">Your Name</author>
  
  <url type="website">https://github.com/your_username/B2_ROS_Signal</url>
  <url type="repository">https://github.com/your_username/B2_ROS_Signal.git</url>
  <url type="bugtracker">https://github.com/your_username/B2_ROS_Signal/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- ROS2 Core Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- Unitree SDK2 / ROS2 Messages -->
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  
  <!-- Message Generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
